<resources>
    <string name="app_name">Ob-havo</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="login">Login</string>
    <string name="city">Tashkent, UZ</string>
    <string name="updateData">20 April 2021, 10:08 AM</string>
    <string name="condition">Clear Sky</string>
    <string name="temperature">29°C</string>
    <string name="min_temp">Min Temp: 30°C</string>
    <string name="sunrise">Sunrise</string>
    <string name="time">06:40 AM</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="created_by">Created By</string>
    <string name="name">Criminal code</string>
    <string name="error">Something went wrong</string>
    <string name="max_temp">Max Temp: 30°C</string>
    <string name="population">Population</string>
    <string name="quantity">2.5 bl</string>
    <string name="speed">3.04 m/s</string>
    <string name="pres">1080 hPa</string>
    <string name="hum">16 %</string>
    <string name="enter_city">Enter City</string>
    <string name="next_days">Next days</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_on_map">Choose on Map</string>
    <string name="google_maps_key">AIzaSyCFjRfkoUqo01_KdPBvp-t7lc-lWygYiHw</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>