<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@drawable/bg_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <RelativeLayout
        android:id="@+id/mainContainerF"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:orientation="vertical"
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/addressContainer"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/addressF"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="28sp"
                    android:text="@string/city"/>

                <TextView
                    android:id="@+id/updated_atF"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/updateData"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="9"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <LinearLayout
                    android:padding="12dp"
                    android:layout_margin="12dp"
                    android:id="@+id/overviewContainerF"
                    android:background="@drawable/round_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tempF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="90sp"
                        android:textColor="@color/black"
                        android:fontFamily="sans-serif-thin"
                        android:layout_gravity="center"
                        android:text="@string/temperature"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/temp_minF"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/min_temp"/>

                        <TextView
                            android:textAlignment="center"
                            android:text="/"
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal" />

                        <TextView
                            android:id="@+id/temp_maxF"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/max_temp"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/statusF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="26sp"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:text="@string/condition"/>

                    <ImageView
                        android:id="@+id/weatherIconF"
                        android:layout_marginBottom="12dp"
                        android:layout_gravity="center"
                        android:layout_width="82dp"
                        android:layout_height="82dp"/>

                </LinearLayout>

            </LinearLayout>

           <LinearLayout
               android:layout_weight="1"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <LinearLayout
                   android:id="@+id/detailsContainerF"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal"
                       android:padding="3dp"
                       android:weightSum="3">

                       <LinearLayout
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:orientation="vertical"
                           android:layout_weight="1"
                           android:gravity="center"
                           android:padding="8dp"
                           android:background="@drawable/round_back">

                           <ImageView
                               android:layout_width="25dp"
                               android:layout_height="25dp"
                               android:src="@drawable/sunrise"
                               app:tint="#FFFFFF" />

                           <Space
                               android:layout_width="wrap_content"
                               android:layout_height="5dp"/>

                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:textSize="12sp"
                               android:textColor="@color/black"
                               android:text="@string/sunrise"/>

                           <TextView
                               android:id="@+id/sunriseF"
                               android:textColor="@color/black"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:textSize="14sp"
                               android:text="@string/time"/>
                       </LinearLayout>

                       <Space
                           android:layout_width="10dp"
                           android:layout_height="wrap_content"/>

                       <LinearLayout
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:orientation="vertical"
                           android:layout_weight="1"
                           android:gravity="center"
                           android:padding="8dp"
                           android:background="@drawable/round_back">

                           <ImageView
                               android:layout_width="25dp"
                               android:layout_height="25dp"
                               android:src="@drawable/sunset"
                               app:tint="#FFFFFF" />

                           <Space
                               android:layout_width="wrap_content"
                               android:layout_height="5dp"/>

                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:textColor="@color/black"
                               android:textSize="12sp"
                               android:text="@string/sunset"/>

                           <TextView
                               android:id="@+id/sunsetF"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:textColor="@color/black"
                               android:textSize="14sp"
                               android:text="@string/time"/>
                       </LinearLayout>

                       <Space
                           android:layout_width="10dp"
                           android:layout_height="wrap_content"/>

                       <LinearLayout
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:orientation="vertical"
                           android:layout_weight="1"
                           android:gravity="center"
                           android:padding="8dp"
                           android:background="@drawable/round_back">

                           <ImageView
                               android:layout_width="25dp"
                               android:layout_height="25dp"
                               android:src="@drawable/wind"
                               app:tint="#FFFFFF" />

                           <Space
                               android:layout_width="wrap_content"
                               android:layout_height="5dp"/>

                           <TextView android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:textColor="@color/black"
                               android:textSize="12sp"
                               android:text="@string/wind"/>

                           <TextView
                               android:id="@+id/windF"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:textColor="@color/black"
                               android:textSize="14sp"
                               android:text="@string/speed"/>
                       </LinearLayout>
                   </LinearLayout>

                   <Space
                       android:layout_width="wrap_content"
                       android:layout_height="10dp"/>

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal"
                       android:padding="3dp"
                       android:weightSum="3">

                       <LinearLayout
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:orientation="vertical"
                           android:layout_weight="1"
                           android:gravity="center"
                           android:padding="8dp"
                           android:background="@drawable/round_back">

                           <ImageView
                               android:layout_width="25dp"
                               android:layout_height="25dp"
                               android:src="@drawable/pressure"
                               app:tint="#FFFFFF" />

                           <Space
                               android:layout_width="wrap_content"
                               android:layout_height="5dp"/>

                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:textSize="12sp"
                               android:textColor="@color/black"
                               android:text="@string/pressure"/>

                           <TextView
                               android:id="@+id/pressureF"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:textSize="14sp"
                               android:textColor="@color/black"
                               android:text="@string/pres"/>
                       </LinearLayout>

                       <Space
                           android:layout_width="10dp"
                           android:layout_height="wrap_content"/>

                       <LinearLayout
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:orientation="vertical"
                           android:layout_weight="1"
                           android:gravity="center"
                           android:padding="8dp"
                           android:background="@drawable/round_back">

                           <ImageView
                               android:layout_width="25dp"
                               android:layout_height="25dp"
                               android:src="@drawable/humidity"
                               app:tint="#FFFFFF" />

                           <Space
                               android:layout_width="wrap_content"
                               android:layout_height="5dp"/>

                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:textSize="12sp"
                               android:textColor="@color/black"
                               android:text="@string/humidity"/>

                           <TextView
                               android:id="@+id/humidityF"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:textSize="14sp"
                               android:textColor="@color/black"
                               android:text="@string/hum"/>
                       </LinearLayout>

                       <Space
                           android:layout_width="10dp"
                           android:layout_height="wrap_content"/>

                       <LinearLayout
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:orientation="vertical"
                           android:layout_weight="1"
                           android:gravity="center"
                           android:padding="8dp"
                           android:background="@drawable/round_back">

                           <ImageView
                               android:layout_width="25dp"
                               android:layout_height="25dp"
                               android:src="@drawable/info"
                               app:tint="#FFFFFF" />

                           <Space
                               android:layout_width="wrap_content"
                               android:layout_height="5dp"/>

                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:textSize="12sp"
                               android:textColor="@color/black"
                               android:text="@string/population"/>

                           <TextView
                               android:id="@+id/about"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:textSize="14sp"
                               android:textColor="@color/black"
                               android:text="@string/quantity"/>
                       </LinearLayout>
                   </LinearLayout>
               </LinearLayout>

           </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>